# clicky

./: Cargo.toml  README.md  build.rs
.vim/: coc-settings.json
src/: app.rs  logging.rs  main.rs  midi.rs  opts.rs
src/gui/: mod.rs
src/tui/: mod.rs
