[package]
name = "clicky"
version = "0.1.0"
authors = ["John <johnmorris@tuta.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0"
midir = "0.7"
wmidi = "4.0"
winit = "0.24"
anyhow = "1.0"
simple_logger = "1.11"
log = "0.4"
